# colcon-cmake

./: .gitignore  .travis.yml  README.rst  appveyor.yml  publish-python.yaml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yaml
colcon_cmake/: __init__.py
colcon_cmake/environment/: cmake_module_path.py
colcon_cmake/event_handler/: compile_commands.py
colcon_cmake/package_identification/: cmake.py
colcon_cmake/task/cmake/: __init__.py  build.py  test.py
colcon_cmake/test_result/: ctest.py
test/: conftest.py  spell_check.words  test_copyright_license.py  test_environment_cmake_module_path.py  test_environment_cmake_prefix_path.py  test_event_handler_compile_commands.py  test_flake8.py  test_package_identification_cmake.py  test_parse_cmake_version.py  test_spell_check.py  test_task_cmake_build.py
