[metadata]
name = colcon-cmake
version = attr: colcon_cmake.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-cmake/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-cmake/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support CMake packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
  # to set an environment variable when a package installs a library
  colcon-library-path
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    cmake_args = colcon_cmake.argcomplete_completer.cmake_args:CmakeArgcompleteCompleter
colcon_core.environment =
    cmake_module_path = colcon_cmake.environment.cmake_module_path:CmakeModulePathEnvironment
    cmake_prefix_path = colcon_cmake.environment.cmake_prefix_path:CmakePrefixPathEnvironment
colcon_core.environment_variable =
    cmake_command = colcon_cmake.task.cmake:CMAKE_COMMAND_ENVIRONMENT_VARIABLE
    ctest_command = colcon_cmake.task.cmake:CTEST_COMMAND_ENVIRONMENT_VARIABLE
colcon_core.package_identification =
    cmake = colcon_cmake.package_identification.cmake:CmakePackageIdentification
colcon_core.task.build =
    cmake = colcon_cmake.task.cmake.build:CmakeBuildTask
colcon_core.task.test =
    cmake = colcon_cmake.task.cmake.test:CmakeTestTask
