[metadata]
name = colcon-cmake
version = attr: colcon_cmake.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-cmake/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-cmake/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas, Michel Hidalgo
maintainer_email = web@dirk-thomas.net, michel@ekumenlabs.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support CMake packages.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core>=0.5.6
  # to set an environment variable when a package installs a library
  colcon-library-path
  colcon-test-result>=0.3.3
  packaging
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:pkg_resources is deprecated as an API::flake8_import_order
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-cmake
markers =
    flake8
    linter

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    cmake_args = colcon_cmake.argcomplete_completer.cmake_args:CmakeArgcompleteCompleter
colcon_core.environment =
    cmake_module_path = colcon_cmake.environment.cmake_module_path:CmakeModulePathEnvironment
    cmake_prefix_path = colcon_cmake.environment.cmake_prefix_path:CmakePrefixPathEnvironment
colcon_core.environment_variable =
    cmake_command = colcon_cmake.task.cmake:CMAKE_COMMAND_ENVIRONMENT_VARIABLE
    ctest_command = colcon_cmake.task.cmake:CTEST_COMMAND_ENVIRONMENT_VARIABLE
colcon_core.event_handler =
    compile_commands = colcon_cmake.event_handler.compile_commands:CompileCommandsEventHandler
colcon_core.package_identification =
    cmake = colcon_cmake.package_identification.cmake:CmakePackageIdentification
colcon_core.task.build =
    cmake = colcon_cmake.task.cmake.build:CmakeBuildTask
colcon_core.task.test =
    cmake = colcon_cmake.task.cmake.test:CmakeTestTask
colcon_test_result.test_result =
    ctest = colcon_cmake.test_result.ctest:CtestTestResult

[flake8]
import-order-style = google

[coverage:run]
source = colcon_cmake
